# notes-api-fastapi

./: .gitignore  main.py  notes.db  pyproject.toml
auth/: auth.py  auth_router.py
database/: database.py
notes/: notes_model.py  notes_repository.py  notes_router.py
user/: user_model.py  user_repository.py  user_router.py
