[project]
name = "notesapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-cloud-cli>=0.22.2",
    "fastapi[standard]>=0.139.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
